--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
+    "primevue": "^3.23.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
